syntax = "proto3";
option go_package = ".;goods";
service GoodsInfo{
  //获取商品信息
  rpc getGoodsInfo(GoodsId) returns(Goods) ;

  //冻结商品数量
  rpc goodsFrozen(GoodsFrozenParams) returns(GoodsFrozenResp);

  //冻结商品数量取消
  rpc goodsFrozenCancel(GoodsFrozenCancelParams)returns(GoodsSuccess);

  rpc autoMigrate(GoodsId) returns(GoodsSuccess);
}

message GoodsId{
  int32 value = 1;
}

message Goods{
  int32 id = 1;
  string goods_name = 2;
  int32 price = 3;
  string description = 4;
  int32 frozen_count = 5;
}

message GoodsFrozenParams{
  int32 goods_id = 1;
  int32 count = 2;
}

message GoodsFrozenResp{
  int32 value = 1;
}

message GoodsFrozenCancelParams{
  int32 goods_detail_id = 1;

}

message GoodsSuccess{
  int32 value = 1;
}
